# ai-chatbot

./: .claudeignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc  ARCHITECTURE.md  CLAUDE.md  CORE_PROMPT_UPDATE.md  Dockerfile  Dockerfile.client  IMPLEMENTATION_SUMMARY.md  JSON_PARSING_FIX.md  PR_DESCRIPTION.md  README.md  TOOL_USAGE_FIX.md  crowdin.yml  docker-compose.local.yml  docker-compose.server.yml  docker-compose.yml  index.html  nixpacks.toml  package-lock.json  package.json  playwright.config.js  setup.sh  start.sh  svelte.config.js  vite.config.js
server/: .env.example  CLAUDE.md  Dockerfile  conftest.py  manage.py  pyproject.toml  requirements.txt  test_core_prompt.py  test_prompt_service.py
server/chat/: admin.py  metrics.py  models.py  orchestrator.py  routing.py  serializers.py  test_questions.py  urls.py  user_token_service.py  views.py
server/chat/V2/: __init__.py  anthropic_views.py  base_llm_service.py  checks.py  consumers.py  file_trace.py  model_pricing.json  origin.py  pricing.py  remote_config_client.py  sentry.py  utils.py  views.py
server/chat/agent/: __init__.py  claude_service.py  claude_service_old.py  sefaria_client.py  tool_schemas.py  (+1 more)
server/chatbot_server/: asgi.py  model_defaults.py  settings.py  test_settings.py  test_settings_postgres.py  urls.py  wsgi.py
server/docs/: BRAINTRUST_TRACING.md
server/loadtest/: CLAUDE.md  Dockerfile.loadtest  Dockerfile.mock  README.md  __init__.py  curl_loadtest.sh  load_test.py  mock_anthropic.py  requirements.txt  test_mock_anthropic.py
server/scripts/: update_pricing.py
(+323 files in other folders)
