[project]
name = "lc-chatbot-server"
version = "1.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "chatbot_server.test_settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["chat", "."]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top - needed for Django setup scripts
    "B023",   # function definition in loop - false positive for immediately-awaited async functions
]

[tool.ruff.lint.isort]
known-first-party = ["chat", "chatbot_server"]
